<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <RelativeLayout
        android:layout_marginTop="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"
            android:layout_width="125dp"
            android:layout_height="125dp"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageProfile"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/profile_name_default"
            android:textColor="@color/colorBlack"
            android:textSize="36sp" />


        <TextView
            android:id="@+id/textViewAbout"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textViewName"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/profile_about_text_default" />


        <View
            android:id="@+id/upperDivision"
            android:layout_marginTop="30dp"
            android:layout_below="@id/textViewAbout"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:weightSum="3"
            android:id="@+id/container"
            android:layout_below="@+id/upperDivision"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewRepos"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:text="50"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="20sp"
                    android:text="@string/profile_label_videos"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewProjects"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:text="1000000"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="20sp"
                    android:text="@string/followers"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewStars"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:text="1500000"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/profile_label_stars"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:id="@+id/downDivision"
            android:layout_marginTop="30dp"
            android:layout_below="@id/container"
            android:background="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <android.support.v7.widget.AppCompatButton
            android:layout_below="@+id/downDivision"
            android:id="@+id/btnShare"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_share_white_24dp"
            android:drawableLeft="@drawable/ic_share_white_24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:padding="12dp"
            android:text="@string/button_share"/>

    </RelativeLayout>
</ScrollView>
